# jw-scraping

./: .gitignore  Cargo.toml  LICENSE  Proyecto.md  README.md  Registros.md  get-week-info.js  index.html  index.json  package-lock.json  package.json  requirements.txt  scraper.py  stats.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: scrape-and-deploy.yml  scrape-weekly.yml
api/: docs.html  index.json  languages.json  latest-es.json  latest.json  openapi.yaml  stats.json  weeks-de.json  weeks-en.json  weeks-es.json  weeks-fr.json  weeks-it.json  weeks-pt.json  weeks.json
api/data/: languages.json
api/data/2024/: week-22.json
bruno-collection/: API Info.bru  All Weeks.bru  Latest Week.bru  Specific Week.bru  Statistics.bru  bruno.json
bruno-collection/environments/: GitHub Pages.bru  Local.bru
clients/: README.md
clients/java/: pom.xml
clients/javascript/: jw-meeting-api.js
clients/python/: __init__.py  jw_meeting_api.py  setup.py
clients/typescript/: jw-meeting-api.ts  types.ts
data/: index.json  languages.json
data/2024/: week-53.json
data/2025/: week-31.json  week-32.json  week-53.json
src/: api-generator.js  bible_epub_poc.ts  bible_poc.ts  client-generator.js  discovery.rs  error-handler.js  generate-languages-api.js  index.ts  language-config.js  lib.rs  openapi-validator.js  scraper.js  summary.js  validator.js
src/crypto/: mod.rs
src/db/: mod.rs
src/html/: mod.rs
src/models/: mod.rs
src/services/: asset.ts  crypto.ts  database.ts  discovery.ts  file.ts  parsing.ts
src/types/: cdn.ts
(+4 files in other folders)
